force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/Voice_User_System_Phone_Numbers__c.object-meta.xml
<CustomObject>
    <description>Voice Project - USER LEVEL System Phone Numbers: 
- Phone Number
- Primary</description>
    <label>User Level Phone Number</label>
    <nameField>
        <displayFormat>USPN-{00000000}</displayFormat>
        <label>Voice: User System Phone Numbers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Level Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>