force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Voice - WCSA - User Account (Transformed value) of System Phone Numbers of User Level Accounts</description>
    <inlineHelpText>Voice - WCSA - User Account (Transformed value) of System Phone Numbers of User Level Accounts</inlineHelpText>
    <label>User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Voice_User_System_Phone_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>