force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/fields/Alternate_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Number_3__c</fullName>
    <description>Voice - WCSA  - User Alternate Number #3 System Phone Number</description>
    <inlineHelpText>Voice - WCSA  - User Alternate Number #3 System Phone Number</inlineHelpText>
    <label>Alternate Number #3</label>
    <type>Phone</type>
</CustomField>