force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/fields/Alternate_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Number__c</fullName>
    <description>Voice - WCSA - User - Alternate System Phone Number</description>
    <inlineHelpText>Voice - WCSA - User - Alternate System Phone Number</inlineHelpText>
    <label>Alternate Number #1</label>
    <type>Phone</type>
</CustomField>