force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Voice - WCSA - A marked check-box indicates this is the Primary Phone Number of the User</description>
    <inlineHelpText>Voice - WCSA - A marked check-box indicates this is the Primary Phone Number of the User</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>