force-app/main/default/objects/Voice_User_System_Phone_Numbers__c/fields/Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Number__c</fullName>
    <description>Voice - WCSA - User - Primary System Phone Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - User - Primary System Phone Number</inlineHelpText>
    <label>Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>